# sd-turbo-on-mac

./: README.md  pyproject.toml
app/: example.py  example_cv.py  main.py  script.py  sd_turbo.py
app/examples/: movie.py  web_camera.py
