[tool.poetry]
name = "sd-turbo-on-mac"
version = "0.1.0"
description = "sd-turbo-on-mac"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
 
[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
python-dotenv = "^1.0.0"
nptyping = "^2.5.0"
diffusers = {extras = ["torch"], version = "^0.25.0"}
transformers = "^4.36.2"
 
[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
poethepoet = "^0.18.1"