[tool.poetry]
name = "sd-turbo-on-mac"
version = "0.1.0"
description = "sd-turbo-on-mac"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
 
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^1.10.4"
python-dotenv = "^1.0.0"
nptyping = "^2.5.0"
diffusers = {extras = ["torch"], version = "^0.25.0"}
transformers = "^4.36.2"
types-pillow = "^10.1.0.20240106"
ipython = "^8.20.0"
compel = "^2.0.2"
torch = "^2.1.2"
opencv-python = "4.8.0.74"
python-coreml-stable-diffusion = {git = "https://github.com/apple/ml-stable-diffusion"}
 
[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
poethepoet = "^0.18.1"